--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,5 +1,5 @@
 # Uncomment the following line to enable deep sleep
-# CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_SLEEP=y
 
 # Uncomment the following line to increase the keyboard's wireless range
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
@@ -12,8 +12,8 @@ CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=1
 CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=10
 
 # Enable ZMK Studio for Realtime Keymap Updates
-CONFIG_ZMK_STUDIO=y
-CONFIG_ZMK_STUDIO_LOCKING=n
+CONFIG_ZMK_STUDIO=n
+#CONFIG_ZMK_STUDIO_LOCKING=n
 
 # mouse support
 CONFIG_ZMK_POINTING=y
